Added stop-word normalizer & fix white space tokenizer bug

--- a/Ronin.ML.Text/Ronin.ML.Text.csproj
+++ b/Ronin.ML.Text/Ronin.ML.Text.csproj
@@ -51,7 +51,8 @@
     <Compile Include="IWordNormalizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StemLanguage.cs" />
+    <Compile Include="StopWordNormalizer.cs" />
+    <Compile Include="TextLanguage.cs" />
     <Compile Include="StemNormalizer.cs" />
     <Compile Include="WhiteSpaceTokenizer.cs" />
     <Compile Include="WordContext.cs" />
@@ -62,6 +63,44 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="StopWords\stop-words_english_1_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_english_2_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_english_3_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_english_4_google_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_english_5_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_english_6_en.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_french_1_fr.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_french_2_fr.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_german_1_de.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_german_2_de.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_spanish_1_es.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StopWords\stop-words_spanish_2_es.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
