split white space tokenizer to re & added none-word with options

--- a/Ronin.ML.Text/Ronin.ML.Text.csproj
+++ b/Ronin.ML.Text/Ronin.ML.Text.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="IStringTokenizer.cs" />
     <Compile Include="IWordNormalizer.cs" />
+    <Compile Include="NoneWordTokenizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegularExpressionTokenizer.cs" />
     <Compile Include="StopWordNormalizer.cs" />
     <Compile Include="TextLanguage.cs" />
     <Compile Include="StemNormalizer.cs" />
