--- a/Ronin.ML.Text/Ronin.ML.Text.csproj
+++ b/Ronin.ML.Text/Ronin.ML.Text.csproj
@@ -48,12 +48,13 @@
     <Compile Include="CaseNormalizer.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IStringTokenizer.cs" />
-    <Compile Include="IWordNormalizer.cs" />
+    <Compile Include="IWordProcessor.cs" />
+    <Compile Include="LengthFilter.cs" />
     <Compile Include="NoneWordTokenizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularExpressionTokenizer.cs" />
-    <Compile Include="StopWordNormalizer.cs" />
+    <Compile Include="StopWordFilter.cs" />
     <Compile Include="TextLanguage.cs" />
     <Compile Include="StemNormalizer.cs" />
     <Compile Include="WhiteSpaceTokenizer.cs" />
