--- a/Ronin.ML.Text/Ronin.ML.Text.csproj
+++ b/Ronin.ML.Text/Ronin.ML.Text.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CaseModification.cs" />
     <Compile Include="CaseNormalizer.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="IgnoreWordFilter.cs" />
     <Compile Include="IStringTokenizer.cs" />
     <Compile Include="IWordProcessor.cs" />
     <Compile Include="LengthFilter.cs" />
