--- a/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
+++ b/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WordStat.cs" />
+    <Compile Include="Classifier.cs" />
+    <Compile Include="FeatureCount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
