--- a/Ronin/Ronin.csproj
+++ b/Ronin/Ronin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F400F34F-EFE1-4243-9D0C-299C8DF9AEB0}</ProjectGuid>
+    <ProjectGuid>{02B220C8-CD13-4E25-8BD3-9498E8412A8E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ronin.ML.Classifier</RootNamespace>
-    <AssemblyName>Ronin.ML.Classifier</AssemblyName>
+    <RootNamespace>Ronin</RootNamespace>
+    <AssemblyName>Ronin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,15 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classifier.cs" />
-    <Compile Include="FeatureCount.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ronin\Ronin.csproj">
-      <Project>{02b220c8-cd13-4e25-8bd3-9498e8412a8e}</Project>
-      <Name>Ronin</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
