--- a/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
+++ b/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyClassifier.cs" />
     <Compile Include="Training.cs" />
     <Compile Include="TrainingBucket.cs" />
     <Compile Include="TrainingSet.cs" />
