code complete of ItemClassify(...) renamed Training method to avoid confusion.  Need unit test for ItemClassify(...)

--- a/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
+++ b/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AbstractClassifier.cs" />
     <Compile Include="BayesianClassifier.cs" />
+    <Compile Include="Classification.cs" />
     <Compile Include="ClassifierDataInRam.cs" />
     <Compile Include="FeatureCount.cs" />
     <Compile Include="IClassifier.cs" />
