--- a/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
+++ b/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Classification.cs" />
     <Compile Include="ClassifierDataInRam.cs" />
     <Compile Include="FeatureCount.cs" />
+    <Compile Include="FisherClassifier.cs" />
     <Compile Include="IClassifier.cs" />
     <Compile Include="IClassifierData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
