completed for serialization fails

--- a/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
+++ b/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ClassifierTest.cs" />
     <Compile Include="DummyClassifier.cs" />
     <Compile Include="FisherWordClassifier.cs" />
+    <Compile Include="TestClassifierDataInFile.cs" />
     <Compile Include="Training.cs" />
     <Compile Include="TestBucket.cs" />
     <Compile Include="TrainingSet.cs" />
