Added mongodb models

--- a/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
+++ b/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
@@ -53,7 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryItem.cs" />
     <Compile Include="ClassifierDataInMongoDB.cs" />
+    <Compile Include="FeatureCountItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
