Work in progress. Added CategoryCollection. Not sure if the work is good. Need additional testing

--- a/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
+++ b/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryCollection.cs" />
     <Compile Include="CategoryItem.cs" />
     <Compile Include="ClassifierDataInMongoDB.cs" />
     <Compile Include="FeatureCountItem.cs" />
