--- a/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
+++ b/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CategoryCollection.cs" />
     <Compile Include="CategoryItem.cs" />
     <Compile Include="ClassifierDataInMongoDB.cs" />
+    <Compile Include="FeatureCollection.cs" />
     <Compile Include="FeatureCountItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
