revised FeatureCountItem to be more efficient as mongo collection but delete category will be slow (this is not needed in normal operations)

--- a/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
+++ b/Ronin.ML.Classifier.MongoDB/Ronin.ML.Classifier.MongoDB.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ClassifierDataInMongoDB.cs" />
     <Compile Include="FeatureCollection.cs" />
     <Compile Include="FeatureCountItem.cs" />
+    <Compile Include="FeatureCategoryKey.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
