--- a/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
+++ b/Ronin.ML.Classifier.Test/Ronin.ML.Classifier.Test.csproj
@@ -32,6 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MongoDB.Bson, Version=2.0.1.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Bson.2.0.1\lib\net45\MongoDB.Bson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver, Version=2.0.1.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.2.0.1\lib\net45\MongoDB.Driver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Core, Version=2.0.1.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.Core.2.0.1\lib\net45\MongoDB.Driver.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -49,6 +61,7 @@
     <Compile Include="DummyClassifier.cs" />
     <Compile Include="FisherWordClassifier.cs" />
     <Compile Include="TestClassifierDataInFile.cs" />
+    <Compile Include="TestClassifierDataInMongoDB.cs" />
     <Compile Include="Training.cs" />
     <Compile Include="TestBucket.cs" />
     <Compile Include="TrainingSet.cs" />
@@ -56,6 +69,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ronin.ML.Classifier.MongoDB\Ronin.ML.Classifier.MongoDB.csproj">
+      <Project>{995f2a35-b15c-4164-86ba-60b819a4f97d}</Project>
+      <Name>Ronin.ML.Classifier.MongoDB</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ronin.ML.Classifier\Ronin.ML.Classifier.csproj">
       <Project>{f400f34f-efe1-4243-9d0c-299c8df9aeb0}</Project>
       <Name>Ronin.ML.Classifier</Name>
