--- a/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
+++ b/Ronin.ML.Classifier/Ronin.ML.Classifier.csproj
@@ -47,18 +47,13 @@
     <Compile Include="ClassifierDataInFile.cs" />
     <Compile Include="ClassifierDataInRam.cs" />
     <Compile Include="DataFileParam.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FeatureCount.cs" />
     <Compile Include="FisherClassifier.cs" />
     <Compile Include="IClassifier.cs" />
     <Compile Include="IClassifierData.cs" />
     <Compile Include="IDataStorable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ronin\Ronin.csproj">
-      <Project>{02b220c8-cd13-4e25-8bd3-9498e8412a8e}</Project>
-      <Name>Ronin</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
