--- a/Ronin.ML.Text/Ronin.ML.Text.csproj
+++ b/Ronin.ML.Text/Ronin.ML.Text.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CaseModification.cs" />
     <Compile Include="CaseNormalizer.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="IgnoreWordFilter.cs" />
     <Compile Include="IStringTokenizer.cs" />
     <Compile Include="IWordProcessor.cs" />
@@ -106,12 +107,6 @@
     <Content Include="StopWords\stop-words_spanish_2_es.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ronin\Ronin.csproj">
-      <Project>{02b220c8-cd13-4e25-8bd3-9498e8412a8e}</Project>
-      <Name>Ronin</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
