--- a/Ronin.ML.Console/Ronin.ML.Console.csproj
+++ b/Ronin.ML.Console/Ronin.ML.Console.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7387C3EC-DC70-4BF5-A06A-B69BDCF3B4F0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ronin.ML</RootNamespace>
-    <AssemblyName>Ronin.ML</AssemblyName>
+    <RootNamespace>Ronin.ML.Console</RootNamespace>
+    <AssemblyName>Ronin.ML.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
