--- a/Ronin.ML.Classifier/Ronin.ML.Classifier.nuspec
+++ b/Ronin.ML.Classifier/Ronin.ML.Classifier.nuspec
@@ -8,7 +8,7 @@
     <owners>$author$</owners>
     <licenseUrl>https://github.com/RoninWest/Ronin.ML/tree</licenseUrl>
     <projectUrl>https://github.com/RoninWest/Ronin.ML/tree</projectUrl>
-    <iconUrl>https://avatars2.githubusercontent.com/u/4606120?v=3&s=460</iconUrl>
+    <iconUrl>https://avatars2.githubusercontent.com/u/4606120?v=3&amp;s=460</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
